<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scheduleappoint"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView"
            android:layout_width="312dp"
            android:layout_height="87dp"
            android:text="Schedule"
            android:textAlignment="center"
            android:textColor="#A74AC7"
            android:textSize="37sp"
            android:layout_marginTop="20dp"
            app:fontFamily="@font/croissant_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="54dp"
                        android:padding="30dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="25sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv1_8to9"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time1"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv2_9to10"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time2"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv3_10to11"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time3"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv4_5to6"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time4"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv5_6to7"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time5"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rl6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv6_7to8"
                        android:layout_width="327dp"
                        android:layout_height="108dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="57dp"
                        android:padding="10dp"
                        android:text="@string/time6"
                        android:textAlignment="center"
                        android:textColor="#A74AC7"
                        android:textSize="24sp"
                        app:fontFamily="@font/frank_ruhl_libre_medium" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>